log
Thu 21 Mar 2024 08:19:48 PM UTC: 
 tests:  0|5
total_score: 0/70
945799f
Thu 21 Mar 2024 08:33:56 PM UTC: 
 exercises.c | 8 ++++++++
 1 file changed, 8 insertions(+)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:49:14: error: implicit declaration of function ‘last’ [-Werror=implicit-function-declaration]
   49 |       *(int*)last(L) = i;
      |              ^~~~
exercises.c:49:8: error: cast to pointer from integer of different size [-Werror=int-to-pointer-cast]
   49 |       *(int*)last(L) = i;
      |        ^
cc1: all warnings being treated as errors
Compilation failed
87407bc
Thu 21 Mar 2024 08:35:56 PM UTC: 
 exercises.c | 12 +++++-------
 1 file changed, 5 insertions(+), 7 deletions(-)
 tests:  1|4
total_score: 10/70
4418de5
Thu 21 Mar 2024 08:37:02 PM UTC: 
 exercises.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  1|4
total_score: 10/70
6d6d04b
Thu 21 Mar 2024 08:41:23 PM UTC: 
 exercises.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  2|3
total_score: 20/70
f714845
Thu 21 Mar 2024 08:48:35 PM UTC: 
 exercises.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  3|2
total_score: 40/70
ae4260a
Sat 23 Mar 2024 07:50:46 PM UTC: 
 exercises.c | 62 +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
 1 file changed, 62 insertions(+)
In file included from test.c:5:
exercises.c: In function ‘copia_pila’:
exercises.c:96:11: error: unused variable ‘P3’ [-Werror=unused-variable]
   96 |    Stack* P3 = create_stack();
      |           ^~
exercises.c: In function ‘parentesisBalanceados’:
exercises.c:113:26: error: passing argument 2 of ‘push’ makes pointer from integer without a cast [-Werror=int-conversion]
  113 |         push(pila, cadena[i]);
      |                    ~~~~~~^~~
      |                          |
      |                          char
In file included from exercises.c:7,
                 from test.c:5:
stack.h:11:31: note: expected ‘void *’ but argument is of type ‘char’
   11 | void push(Stack *stack, void *data) { pushFront(stack, data); }
      |                         ~~~~~~^~~~
In file included from test.c:5:
exercises.c:117:15: error: implicit declaration of function ‘isEmpty’ [-Werror=implicit-function-declaration]
  117 |           if (isEmpty(pila)){
      |               ^~~~~~~
exercises.c:120:18: error: expected ‘(’ before ‘{’ token
  120 |           else if{
      |                  ^
      |                  (
exercises.c:122:21: error: comparison between pointer and integer [-Werror]
  122 |             if (top != '('){
      |                     ^~
exercises.c:133:18: error: expected ‘(’ before ‘{’ token
  133 |           else if{
      |                  ^
      |                  (
exercises.c:135:21: error: comparison between pointer and integer [-Werror]
  135 |             if (top != '}'){
      |                     ^~
exercises.c:146:18: error: expected ‘(’ before ‘{’ token
  146 |           else if{
      |                  ^
      |                  (
exercises.c:148:21: error: comparison between pointer and integer [-Werror]
  148 |             if (top != ']'){
      |                     ^~
exercises.c: At top level:
exercises.c:169:1: error: expected identifier or ‘(’ before ‘}’ token
  169 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
32a613c
Sat 23 Mar 2024 07:52:39 PM UTC: 
 exercises.c | 68 ++++++++-----------------------------------------------------
 1 file changed, 8 insertions(+), 60 deletions(-)
 tests:  4|2
total_score: 40/70
824926d
